feat(author service): crud authors (unimplemented grpc)
