# author_service/domain/dto/author_dto.go
@@ -1,6 +1,10 @@
 package dto
 
-import "time"
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
 
 type GetAuthorListReq struct {
 	Query     string `form:"query"`
@@ -33,4 +37,82 @@ type AuthorRepo_GetListParams struct {
 	Limit     int
 	SortOrder string
 	SortBy    string
+}
+
+type CreateNewAuthorReq struct {
+	Email     string  `json:"email" binding:"required,email"`
+	Username  string  `json:"username" binding:"required"`
+	Password  string  `json:"password" binding:"required"`
+	FirstName string  `json:"first_name" binding:"required"`
+	LastName  string  `json:"last_name"`
+	BirthDate *string `json:"birth_date"`
+	Bio       *string `json:"bio"`
+	Role      string  `json:"role" binding:"required,oneof=admin user"`
+}
+
+type CreateNewAuthorRespData struct {
+	UUID      uuid.UUID `json:"uuid"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	UserUUID  uuid.UUID `json:"user_uuid"`
+	Email     string    `json:"email"`
+	Username  string    `json:"username"`
+	FirstName string    `json:"first_name"`
+	LastName  string    `json:"last_name"`
+	BirthDate *string   `json:"birth_date"`
+	Bio       *string   `json:"bio"`
+	Role      string    `json:"role"`
+}
+
+type EditAuthorReq struct {
+	Email     *string `json:"email" binding:"email"`
+	Username  *string `json:"username"`
+	Password  *string `json:"password"`
+	FirstName *string `json:"first_name"`
+	LastName  *string `json:"last_name"`
+	BirthDate *string `json:"birth_date"`
+	Bio       *string `json:"bio"`
+	Role      *string `json:"role" binding:"oneof=admin user"`
+}
+
+type EditAuthorRespData struct {
+	UUID      uuid.UUID `json:"uuid"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	UserUUID  uuid.UUID `json:"user_uuid"`
+	Email     string    `json:"email"`
+	Username  string    `json:"username"`
+	FirstName string    `json:"first_name"`
+	LastName  string    `json:"last_name"`
+	BirthDate *string   `json:"birth_date"`
+	Bio       *string   `json:"bio"`
+	Role      string    `json:"role"`
+}
+
+type DeleteAuthorRespData struct {
+	UUID      uuid.UUID `json:"uuid"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	UserUUID  uuid.UUID `json:"user_uuid"`
+	Email     string    `json:"email"`
+	Username  string    `json:"username"`
+	FirstName string    `json:"first_name"`
+	LastName  string    `json:"last_name"`
+	BirthDate *string   `json:"birth_date"`
+	Bio       *string   `json:"bio"`
+	Role      string    `json:"role"`
+}
+
+type GetAuthorDetailRespData struct {
+	UUID      uuid.UUID `json:"uuid"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	UserUUID  uuid.UUID `json:"user_uuid"`
+	Email     string    `json:"email"`
+	Username  string    `json:"username"`
+	FirstName string    `json:"first_name"`
+	LastName  string    `json:"last_name"`
+	BirthDate *string   `json:"birth_date"`
+	Bio       *string   `json:"bio"`
+	Role      string    `json:"role"`
 }
